--- a/package.json
+++ b/package.json
@@ -12,19 +12,20 @@
     "react-dom": "^18.2.0",
     "react-redux": "^8.0.5",
     "react-scripts": "5.0.1",
+    "sass": "^1.58.3",
     "typescript": "^4.9.5",
     "web-vitals": "^2.1.4"
   },
-"devDependencies" : {
-  "@reduxjs/toolkit": "^1.9.2",
-  "@testing-library/jest-dom": "^5.16.5",
-  "@testing-library/react": "^13.4.0",
-  "@testing-library/user-event": "^14.4.3",
-  "@types/jest": "^27.5.2",
-  "@types/node": "^17.0.45",
-  "@types/react": "^18.0.27",
-  "@types/react-dom": "^18.0.10"
-},
+  "devDependencies": {
+    "@reduxjs/toolkit": "^1.9.2",
+    "@testing-library/jest-dom": "^5.16.5",
+    "@testing-library/react": "^13.4.0",
+    "@testing-library/user-event": "^14.4.3",
+    "@types/jest": "^27.5.2",
+    "@types/node": "^17.0.45",
+    "@types/react": "^18.0.27",
+    "@types/react-dom": "^18.0.10"
+  },
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
